
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tat_cli"
description = "Colorize terminal output with regex."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "salt-die", email = "salt-die@protonmail.com"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []
dynamic = ["version"]

[project.urls]
"repository" = "https://github.com/salt-die/tat_cli"

[project.scripts]
tat = "tat_cli:tat_cli"

[tool.setuptools.dynamic]
version = {attr = "tat_cli.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
exclude = []

[tool.ruff.lint]
select = [
    "D",  # pydocstyle
    "F",  # pyflakes
    "E",  # pycodestyle - error
    "W",  # pycodestyle - warning
    "I",  # isort
]
ignore = [
    "D105",  # undocumented-magic-method
    "D205",  # blank-line-after-summary -- This rule seems bugged for summaries that need more than one line.
]
fixable = ["ALL"]

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.ruff.pycodestyle]
max-doc-length=88
